Fix the layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@
   .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
+    
   }
   
   .list--inline .list__item {
@@ -193,7 +193,7 @@
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -277,6 +277,7 @@
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
   }
   
   .input-group .btn {
@@ -725,8 +726,9 @@
    max-width: 670px;
 }
 .block-domain__prices{
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(2,1fr);
   grid-template-rows: repeat(2,6rem);
   font-size: 2rem;
   font-weight: 600;
